# translocator-models

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test_and_deploy.yml
translocator_models/: __init__.py  fit_the_model.py  fitting_methods.py  models.py
